<resources>
    <string name="app_name">Money Lover</string>
    <string name="title_activity_launcher_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_description">Quản lý tài chính theo cách
của riêng bạn, giúp bạn đạt mục tiêu tiết kiệm nhanh nhất</string>
    <string name="button_new_user">Lần đầu sử dụng Money Lover</string>
    <string name="button_already_user">Đã từng sử dụng Money Lover</string>
    <string name="signup">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="or">Họăc</string>
    <string name="null_username">Bạn chưa nhập tên nguời dùng!</string>
    <string name="income">Khoản thu</string>
    <string name="outcome">Khoản chi</string>
    <string name="income_type">Loại khoản thu</string>
    <string name="outcome_type">Loại khoản chi</string>
    <string name="chart">Thống kê</string>
    <string name="information">Giới thiệu</string>
    <string name="exit">Thoát</string>
    <string name="open_drawer">Open Drawer</string>

    <string name="remember_information">Ghi nhớ thông tin?</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_income_type">Thêm loại khoản thu mới</string>
    <string name="cancel">Huỷ</string>
    <string name="add">Thêm</string>
    <string name="cannot_be_empty">Không đuợc để trống!</string>
    <string name="save">Lưu</string>
    <string name="income_name">Tên khoản thu</string>
    <string name="note">Ghi chú</string>
    <string name="income_date">Ngày thu</string>
    <string name="add_income">Thêm khoản thu mới</string>
    <string name="didnot_choose">Bạn chưa chọn  lựa chọn nào</string>
    <string name="amount">Số luợng</string>
    <string name="successfully">Thành công!</string>
    <string name="failed">Thất bại!</string>
    <string name="add_new_expense_type">Thêm loại khoản chi mới</string>
    <string name="expense_name">Tên khoản chi</string>
    <string name="expense_type">Loại khoản chi</string>
    <string name="expense_date">Ngày chi</string>
    <string name="add_expense">Thêm khoản chi mới</string>

</resources>