<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.NewExpense">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_new_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            app:navigationIconTint="@color/white"
            app:titleTextColor="@color/white">

            <TextView
                android:id="@+id/button_save_new_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_new_expense_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_new_expense_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_new_expense_note"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/note">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_new_expense_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_new_expense_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/expense_type">

            <AutoCompleteTextView
                android:id="@+id/text_input_new_expense_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_new_expense_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/expense_date"
            app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_new_expense_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:paddingEnd="32dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_new_expense_amount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/amount">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="numberDecimal"
                android:id="@+id/text_input_new_expense_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</LinearLayout>